--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,5 +9,5 @@ spring:
     show-sql: true
   jwt:
     secret: ${JWT_SECRET}
-    accessTokenExpiration: 900 # 15 minutes
+    accessTokenExpiration: 7200 # 2 hours
     refreshTokenExpiration: 604800 # 7 days
