--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,7 @@ spring:
     secret: ${JWT_SECRET}
     accessTokenExpiration: 7200 # 2 hours
     refreshTokenExpiration: 604800 # 7 days
+stripe:
+  secretKey: ${STRIPE_SECRET_KEY}
+  webhookSecretKey: ${STRIPE_WEBHOOK_SECRET_KEY}
+websiteUrl: http://localhost:3000
